--- a/package.json
+++ b/package.json
@@ -1,4 +1,5 @@
 {
+  "homepage":"https://harish2896.github.io/movie-effect-with-linear-gradient/",
   "name": "movie-eefect-with-linear-gradient",
   "private": true,
   "version": "0.0.0",
